test/classes/ferguson/coerce-const-ref.good
coerce-const-ref.chpl:16: error: value from coercion passed to const ref formal 'arg'
